test/valid/LeastUpperBoundInIf/D.plume
/**
 * @author Vasco T. Vasconcelos
 * @version $Id: D.plume 390 2012-05-21 15:00:43Z tcomp000 $
 */
class D extends A is