test/invalid/fc34950_superExtends/A.plume
/**
 * A.plume
 *
 * Test: extends itself indirectly 
 * A->B->C->D->A   ('->' means extends)
 *
 * @author namartins
 * @version $Id: A.plume 286 2012-05-01 10:24:19Z tcomp000 $
 */
 
 abstract class A extends B is	
 